// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReadMoreLink /> should not render anything if not visible 1`] = `""`;

exports[`<ReadMoreLink /> should render a button with correct label if expanded 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="link"
  className="btn-block"
  disabled={false}
  onClick={[Function]}
>
  <FormattedMessage
    id="global.read_less"
    values={Object {}}
  />
</Button>
`;

exports[`<ReadMoreLink /> should render a button with correct label if not expanded 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="link"
  className="btn-block"
  disabled={false}
  onClick={[Function]}
>
  <FormattedMessage
    id="global.read_more"
    values={Object {}}
  />
</Button>
`;
